# minipytorch

./: .gitignore  CMakeLists.txt  README.md  Tensor.py  build.bat  c_cpp_properties.json  dot.py  flatten.py  matrixgenertor.py  reshape.py  transpose.py  vcpkg.json  vector_add.py  vector_adder.py
autograd/Initialization/: initneu.cpp
linear_algebra_matrix_operations/: det.c  det.pyx  dot.py  identity.py  matrixcomplex.py  matrixsimple.cpp  reshape.c  reshape.py  reshape.pyx  setup.py  test.py  trace.py  transpose.py  vectoradd.cpp
src/cpp/autograd/Initialization/: initneu.cpp
src/cpp/core/: Tensor.cpp  allocator.hpp  device.hpp  dtype.hpp  factory.cpp  storage.hpp  tensorimpl.hpp
src/cpp/linear_algebra_matrix_operations/: matrixsimple.cpp  naivegemm.cpp  simdmatmul.cpp  test.cpp
